_sass/listings.scss
#container-listings {
  background-image: url(../images/about/fs-bg.jpg);
  background-size: cover;
  .listings-header {
    @include header;
  }
  .navigation-arrows {
    position: static;
    width: 14px;
    height: 14px;
  }

  #navigation-arrow-right {
    margin-left: 8px;
  }

  #navigation-arrow-left {
    margin-right: 8px;
  }

  .content {
    padding-top: 12vh;
    min-height: 85vh;
  }
  .header {
    text-align: center;
    > h4 {
      font-size: 2.5em;
      margin: 0 0 5px 0;
      color: #514d4c;
    }
    > p {
      font-size: 1.4em;
      margin: 0 15% 0 15%;
      color: gray;
    }
    > input {
      margin-top: 30px;
      border-radius: 30px;
      width: 420px;
      height: 50px;
    }
  }

  .submenu {
    display: inline;
    color: grey;
    font-size: 0.8em;
    > span {
      vertical-align: middle;
    }
  }

  #features-toggle {
    border-color: lightgrey;
    color: $listings-text;
    border-style: solid;
    border-width: thin;
    height: 30px;
    width: 30px;
    font-size: 21px;
    margin-right: 2px;
    text-align: center;
    vertical-align: middle;
    display: inline-block;
    cursor: pointer;
  }

  #show-less-filters {
    display: none;
  }

  .plus-sign {
    &:after {
      content: "+";
    }
  }

  .minus-sign {
    &:after {
      content: "-";
    }
  }

  .listings {
    padding-top: 42px;
  }

  .filters {
    justify-content: center;
    background-color: white;
    display: none;
    box-shadow: 0px 0px 18px 6px #f2f2f2;
    padding: 15px 0;
    text-align: center;
    font-size: 0.7em;
    margin: 42px auto 0;
    width: 70vw;
    max-width: $page-max-width;
    > a {
      text-decoration: none;
    }
  }

  .listings__filter {
    width: 22%;
    margin: 6px 7px;
    border-color: lightgrey;
    border-style: solid;
    border-width: thin;
  }

  .listings__button {
    background-color: $primary-color-darker;
    min-width: 120px;
    color: white;
    border: none;
    cursor: pointer;
    &#listing-clear-filters {
      background-color: #514d4c;
    }
  }

  .listing-label {
    top: 8px;
    left: -6px;
    color: white;
    padding: 3px 5px;
    font-size: 1.1em;
    width: 80%;
  }

  .amenity__cell {
    display: table-cell;
    width: 50%;
    padding: 4px;
    vertical-align: top;
  }

  .amenity__row {
    display: table-row;
  }

  .amenity__icon {
    vertical-align: middle;
    display: inline-block;
    margin-right: 3px;
  }

  .amenity__detail {
    vertical-align: middle;
    display: inline-block;
    width: 60%;
  }

  .sublease-label {
    background-color: #3678c6;
  }

  .lease-label {
    background-color: $primary-color;
  }

  .lease {
    background-color: $brand-blue;
  }

  .listing-preview {
    position: relative;
    text-decoration: none;
    width: 31%;
    max-width: 350px;
    margin: 0 18px 18px 0;
    margin-bottom: 36px;
    color: gray;
    background-color: white;
    box-shadow: 0px 0px 18px 6px #f2f2f2;
    > a {
      text-decoration: none;
    }
    .header {
      background-image: url(../images/placeholder-thumbnail.jpg);
      background-size: cover;
      height: 190px;
      margin: 0;
      position: relative;
      &:after {
        display: block;
        content: " ";
        position: absolute;
        bottom: 0;
        left: 0;
        height: 50%;
        width: 100%;
        z-index: 1;
        background-image: linear-gradient(to bottom, rgba(#eee, 0), #303030);
      }
      .address {
        position: absolute;
        left: 14px;
        bottom: 14px;
        color: white;
        text-align: left;
        padding: 0 0 12px 12px;
        font-size: 1.2em;
        z-index: 2;
      }
    }
    .short-caption {
      height: 3.5em;
      overflow: hidden;
    }

    .listing-content {
      padding: 0 12px 10px 12px;
      height: calc(100% - 190px);
      .amenities {
        width: 99%;
        margin: 0 auto;
        font-size: 0.8em;
        > tr {
          > td {
            width: 135px;
            min-height: 75px;
            padding: 6px;
            vertical-align: top;
          }
        }
        /*
        > div {
          display: inline-block;
          width: 46%;
          margin-bottom: 15px;
          text-align: center;
          height: 35px;
          > img {
            margin-right: 5px;
            width: 35px;
          }
        }
        */
        > span {
          margin-left: 2px;
        }
        > p {
          > img {
            padding-right: 3px;
          }
        }
      }
      > p {
        font-size: 0.8em;
      }
    }
    .listing-preview-footer {
      border-top: solid;
      border-width: 1.5px;
      border-color: #f3f3f3;
      padding: 18px;
    }
  }

  .listings-search {
    border-style: solid;
    border-color: lightgray;
    text-indent: 18px;
    outline: none;
  }

  input.listings-search::-webkit-input-placeholder {
    color: $listings-text;
    font-size: 1.1em;
    font-family: $font-montserrat;
    line-height: 110%;
    opacity: 0.7;
  }

  .paginator {
    text-align: center;
    position: relative;
    font-size: 0.9em;
    color: #959595;
    margin: -15px 0 23px 0;
    > div {
      display: inline-block;
      padding: 3px;
    }
    .pages {
      .selected {
        background-color: $primary-color;
        color: white;
        border-style: none;
        border-width: thin;
        opacity: 1;
      }
      .next {
        display: inline;
      }
      > a {
        margin: 0px;
        padding: 0px 11px 0px 11px;
        text-align: center;
        vertical-align: middle;
        text-decoration: none;
        cursor: pointer;
        line-height: 28px;
        display: inline-block;
        width: 28px;
        height: 26px;
      }
    }
    .navigate-page {
      color: $primary-color;
      cursor: pointer;
      vertical-align: middle;
    }
  }

  @include mobile {
    #listings-text-search {
      width: 90%;
    }
    .short-caption {
      display: none;
    }

    .submenu {
      display: block;
      margin-top: 18px;
    }

    .listings {
      width: 100%;
      margin-top: 18px;
      margin-bottom: 22px;
    }

    .paginator {
      margin-top: 0;
      margin-bottom: 25px;
      > div {
        padding: 3px;
      }
    }

    .listing-preview {
      width: 90%;
      margin: 7px 5px;
      .header {
        height: 145px;
      }
      .listing-content {
        padding: 8px 0;
        > p {
          line-height: 1;
        }
        .amenities {
          font-size: 0.5em;
          padding: 1px;
          width: 100%;
          margin: 0 auto;
          > tr {
            > td {
              padding: 1px 0px;
            }
          }
        }
      }
      .header {
        .address {
          padding: 0;
          font-size: 1em;
        }
        > p {
          margin: 1px;
        }
        > input {
          width: 94%;
        }
      }
    }
    .filters {
      > * {
        width: 90%;
        font-size: 1.2em;
      }
      > button {
        font-size: 1.3em;
      }
    }
  }
}
/**
 *  Do not remove the comment below. It's the markers used by gulp-inject to inject
 *  all your sass files automatically
 */
// injector
// endinjector

